@@ -22,6 +22,8 @@ WC3 = WooCommerce 3+ (WordPress)
 NOTE: The minimum PHP version requirement is now set to 5.6.
 
 Bugs:
+- ALL (but WC): table index on acumulus_entry.entry_id should not be unique
+  as lock records all have entry_id = 1.
 - MA2: Magento uses weak comparison to check for a selected value: 0 may clash
   with ''.
 - ALL(?): Warning 901 on send new.
